[gd_scene load_steps=21 format=2]

[ext_resource path="res://script/triangle_attack.gd" type="Script" id=1]
[ext_resource path="res://sfx/missile01.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/missileBlock01.wav" type="AudioStream" id=3]
[ext_resource path="res://explosion16.wav" type="AudioStream" id=4]
[ext_resource path="res://dead.wav" type="AudioStream" id=5]

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 9.0
color = Color( 0.352941, 0.584314, 0.937255, 1 )
hue_variation = -0.26
hue_variation_random = 0.71

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygon2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.5, 2.5 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 1 ), Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 1 ), Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 1 ), Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 1 ), Color( 1, 0.247059, 0.423529, 1 ), Color( 1, 0.231373, 0.737255, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=15]
resource_name = "meteo_stagger"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.584314, 0.980392, 0.988235, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "parried"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.290196, 0.839216, 0.270588, 1 ), Color( 0.784314, 0.862745, 0.780392, 1 ), Color( 0.290196, 0.839216, 0.270588, 1 ), Color( 0.784314, 0.862745, 0.780392, 1 ), Color( 0.290196, 0.839216, 0.270588, 1 ), Color( 0.784314, 0.862745, 0.780392, 1 ), Color( 0.290196, 0.839216, 0.270588, 1 ), Color( 0.784314, 0.862745, 0.780392, 1 ), Color( 0.290196, 0.839216, 0.270588, 1 ), Color( 0.784314, 0.862745, 0.780392, 1 ), Color( 0.290196, 0.839216, 0.270588, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=2]
resource_name = "peww"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "player_peww"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ), Color( 0.486275, 1, 0.913725, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=6]
resource_name = "stagger"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.584314, 0.980392, 0.988235, 1 ), Color( 0.701961, 0.584314, 0.988235, 1 ), Color( 0.988235, 0.584314, 0.964706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "tank"
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.968627, 0.960784, 0.388235, 1 ), Color( 1, 0.352941, 0, 1 ), Color( 0.968627, 0.960784, 0.388235, 1 ), Color( 1, 0.352941, 0, 1 ), Color( 0.968627, 0.960784, 0.388235, 1 ), Color( 1, 0.352941, 0, 1 ), Color( 0.968627, 0.960784, 0.388235, 1 ), Color( 1, 0.352941, 0, 1 ), Color( 0.968627, 0.960784, 0.388235, 1 ), Color( 1, 0.352941, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 80, 0, -80, 80, -32, 0, -80, -80 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "tri_attack"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 80, 0, -80, 80, -32, 0, -80, -80 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "tri_explode"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 80, 80, 32, 48, 0, 80, -32, 48, -80, 80, -48, 32, -80, 0, -48, -32, -80, -80, -32, -48, 0, -80, 32, -48, 80, -80, 48, -32, 80, 0, 48, 32 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "tri_tank"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Polygon2D:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 40, 40, 0, 80, -80, 80, -80, 0, -80, -80, 0, -80, 40, -40, 80, 0 ) ]
}

[node name="TriAttack" type="RigidBody2D" groups=["tri_attack"]]
position = Vector2( 1584, 432 )
collision_layer = 0
collision_mask = 33
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -1 )
amount = 64
lifetime = 10.0
speed_scale = 8.0
visibility_rect = Rect2( -4000, -4000, 8000, 8000 )
local_coords = false
process_material = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 80, 0, -80, 80, -32, 0, -80, -80 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/explode = SubResource( 12 )
anims/explosion = SubResource( 8 )
anims/meteo_stagger = SubResource( 15 )
anims/parried = SubResource( 7 )
anims/peww = SubResource( 2 )
anims/player_peww = SubResource( 16 )
anims/stagger = SubResource( 6 )
anims/tank = SubResource( 14 )

[node name="PolygonPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/RESET = SubResource( 9 )
anims/tri_attack = SubResource( 10 )
anims/tri_explode = SubResource( 11 )
anims/tri_tank = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -192, 0 )

[node name="DelaySpawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="QueueFreeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_TriAttack_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DelaySpawnTimer" to="." method="_on_DelaySpawnTimer_timeout"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_QueueFreeTimer_timeout"]
